--- a/milestone_07.html
+++ b/milestone_07.html
@@ -56,11 +56,21 @@ BBOX: -109.5, 34.5, -106.5, 36.5</h2>
 <h2>Question 5</h2>
 	<p>Given a WMS that is represented by the following GetCapabilities request, formulate individual GetMap requests using the following parameters:</p>
 	<p>BBOX=-106.639,35.074,-106.609,35.094 WIDTH=600 HEIGHT=400</p>
-	<p>for each of the following layers: 0 (TNM_Large_Scale_Imagery) and 1 (1_foot_imagery) - yes - USGS just gave numbers as the layer names</p>
+	<p>for each of the following layers: 
+	<ol>
+		<li>0 (TNM_Large_Scale_Imagery)</li>
+		<li> 1 (1_foot_imagery)</li>
+		</ol>
+	</p>
+	
 	<p> http://raster.nationalmap.gov/ArcGIS/services/TNM_Large_Scale_Imagery/
 MapServer/WMSServer?request=GetCapabilities&service=WMS<a href="http://raster.nationalmap.gov/ArcGIS/services/TNM_Large_Scale_Imagery/
 MapServer/WMSServer?request=GetCapabilities&service=WMS"> Link</a></p>
-	<p><b>ANSWER:</b></p>
+	<p><b>ANSWERS:</b>
+	<ol>
+		<li></li>
+		<li></li>
+	</p>
 	
 <h2>Question 6</h2>
 	<p>Which layers return map images that display image content (i.e. return a non-blank image)?</p>
