--- a/milestone_07.html
+++ b/milestone_07.html
@@ -68,7 +68,8 @@ MapServer/WMSServer?request=GetCapabilities&service=WMS<a href="http://raster.na
 MapServer/WMSServer?request=GetCapabilities&service=WMS"> Link</a></p>
 	<p><b>ANSWERS:</b>
 		<ol>
-			<li></li>
+			<li><img src="http://raster.nationalmap.gov/ArcGIS/services/TNM_Large_Scale_Imagery/
+MapServer/WMSServer?request=GetCapabilities&service=WMS&REQUEST=GetMapBBOX=-106.639,35.074,-106.609,35.094&LAYERS=TNM_Large_Scale_Imagery&WIDTH=600&HEIGHT=400&SRS=ESPG:4326&FORMAT=jpeg&STYLES="</li>
 			<li></li>
 		</ol>
 	</p>
