--- a/milestone_07.html
+++ b/milestone_07.html
@@ -69,7 +69,7 @@ MapServer/WMSServer?request=GetCapabilities&service=WMS"> Link</a></p>
 	<p><b>ANSWERS:</b>
 		<ol>
 			<li><img src="http://raster.nationalmap.gov/ArcGIS/services/TNM_Large_Scale_Imagery/
-MapServer/WMSServer?request=GetCapabilities&service=WMS&REQUEST=GetMapBBOX=-106.639,35.074,-106.609,35.094&LAYERS=TNM_Large_Scale_Imagery&WIDTH=600&HEIGHT=400&SRS=ESPG:4326&FORMAT=jpeg&STYLES="</li>
+MapServer/WMSServer?request=GetCapabilities&service=WMS&VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMapBBOX=-106.639,35.074,-106.609,35.094&LAYERS=TNM_Large_Scale_Imagery&WIDTH=600&HEIGHT=400&SRS=ESPG:4326&FORMAT=png&STYLES="</li>
 			<li></li>
 		</ol>
 	</p>
