--- a/milestone_07.html
+++ b/milestone_07.html
@@ -68,7 +68,7 @@ MapServer/WMSServer?request=GetCapabilities&service=WMS<a href="http://raster.na
 MapServer/WMSServer?request=GetCapabilities&service=WMS"> Link</a></p>
 	<p><b>ANSWERS:</b>
 		<ol>
-			<li><img src= "http://raster.nationalmap.gov/arcgis/services/TNM_Large_Scale_Imagery/MapServer/WMSServer?VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=0&WIDTH=600&HEIGHT=400&SRS=ESPG:4326&FORMAT=png&STYLES="
+			<li><img src= "http://www.w3.org/1999/xlink?VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=0&WIDTH=600&HEIGHT=400&SRS=ESPG:4326&FORMAT=png&STYLES="
 </li>
 			<li></li>
 		</ol>
