--- a/milestone_07.html
+++ b/milestone_07.html
@@ -68,19 +68,19 @@ MapServer/WMSServer?request=GetCapabilities&service=WMS<a href="http://raster.na
 MapServer/WMSServer?request=GetCapabilities&service=WMS"> Link</a></p>
 	<p><b>ANSWERS:</b>
 		<ol>
-			<li><img src= "http://raster.nationalmap.gov/arcgis/services/TNM_Large_Scale_Imagery/MapServer/WMSServer?VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=0&WIDTH=600&HEIGHT=400&CRS=EPSG:4326&FORMAT=image/png&STYLES=">http://raster.nationalmap.gov/arcgis/services/TNM_Large_Scale_Imagery/MapServer/WMSServer?VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=0&WIDTH=600&HEIGHT=400&CRS=EPSG:4326&FORMAT=image/png&STYLES=
-</li>
-			<li><img src= "http://raster.nationalmap.gov/arcgis/services/TNM_Large_Scale_Imagery/MapServer/WMSServer?VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=1&WIDTH=600&HEIGHT=400&CRS=EPSG:4326&FORMAT=image/png&STYLES=">"http://raster.nationalmap.gov/arcgis/services/TNM_Large_Scale_Imagery/MapServer/WMSServer?VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=1&WIDTH=600&HEIGHT=400&CRS=EPSG:4326&FORMAT=image/png&STYLES=</li>
+			<li><img src= "http://raster.nationalmap.gov/arcgis/services/TNM_Large_Scale_Imagery/MapServer/WMSServer?VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=0&WIDTH=600&HEIGHT=400&CRS=EPSG:4326&FORMAT=image/png&STYLES="></li>
+			<li><img src= "http://raster.nationalmap.gov/arcgis/services/TNM_Large_Scale_Imagery/MapServer/WMSServer?VERSION=1.3.0&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=1&WIDTH=600&HEIGHT=400&CRS=EPSG:4326&FORMAT=image/png&STYLES="></li>
 		</ol>
 	</p>
 	
 <h2>Question 6</h2>
 	<p>Which layers return map images that display image content (i.e. return a non-blank image)?</p>
-	<p><b>ANSWER:</b></p>
+	<p><b>ANSWER:</b> Neither of these images returned content.</p>
 	
 <h2>Question 7</h2>
 	<p>From examining the information for these layers in the GetCapabilities XML document - which element in each layer’s service metadata do you think provides information about the scales for which the layer will return map images containing data?</p>
-	<p><b>ANSWER:</b></p>
+	<p><b>ANSWER:</b> I believe that the scales can be determined by reading the abstract and paying attention to the MaxScaleDenominator element.
+	</p>
 	
 <h2>Question 8</h2>
 	<p>Which map images contain data for each of the following map image widths (remember to adjust the image height to match the BBOX of the request)</p>
@@ -88,7 +88,7 @@ MapServer/WMSServer?request=GetCapabilities&service=WMS"> Link</a></p>
 		<li>30 pixels</li>
 		<p><b>ANSWER:</b></p>
 		<li>60 pixels</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> 1 foot images and the TNM LARGE Scale Images</p>
 	</ul>
 		
 		</body>
