Midtern shell formating

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_05.html">Milestone 5</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_06.html">Milestone 6</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_07.html">Milestone 7</a></p>
+		
+		<h2>Tests</2>
 		<p><a href="http://aemtoyo.github.io/geog485/midterm.html">Midterm Test</a></p>
 		
 		
