--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_06.html">Milestone 6</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_07.html">Milestone 7</a></p>
 		
-		<h2>Tests</2>
+		<h2>Tests</h2>
 		<p><a href="http://aemtoyo.github.io/geog485/midterm.html">Midterm Test</a></p>
 		
 		
