--- a/midterm.html
+++ b/midterm.html
@@ -27,85 +27,97 @@
 	
 	<h1>Midterm</h1>
 	
-	<h2>Question 1</h2>
-	<p></p>
+<h2>Question 1 Which command line utility would you use to determine the following (4 pts each)</h2>
+	<p>The spatial extent of a GML ﬁle (choose one)?</p>
 	<p><b>ANSWER:</b> </p>
 	
-	<h2>Question 2</h2>
-	<p></p>
+	<p>The spatial reference system of a raster ﬁle in the format of a GeoTIFF (choose one)?</p>
 	<p><b>ANSWER:</b></p>
 	
-	<h2>Question 3</h2>
-	<p></p>
-	
-	<p><b>ANSWER:</b> </p>
-
-	<p> The two that I will be using are; 
+<h2>Question 2  What combination of OGC Service and Request (e.g.SERVICE=WMS&REQUEST=GetFeatureInfo) would you use to perform the following? (3 pts each)</h2>
 	<ol>
-		<li>National Atlas</li>
-		<li>LIDAR</li>
+		<li>Determine the spatial extent of an available layer from a Web Map Service</li>
+		<p><b>ANSWER:</b></p>
+		<li>Obtain a list of coverages from a Web Coverage service.</li>
+		<p><b>ANSWER:</b></p>
+		<li>Determine what ﬁle formats are supported by a Web Feature Service for the delivery of available data types (i.e. layers)</li>
+		<p><b>ANSWER:</b></p>
+		<li>Retrieve a map image from a Web Map Service</li>
+		<p><b>ANSWER:</b></p>
+		<li>Retrieve data from an available coverage from a Web Coverage Service</li>
 	</ol>
-		
-	</p>
 
-	<h2>Question 4</h2>
-	<ul>
-		<li></li>
+<h2>Question 3 Use the cs2cs command line utility to convert the following latitude-longitude coordinates(WGS84) to UTM, Zone 13N, NAD83 coordinates (5 pts each) </h2>
+	<ol>
+		<li>35.682180 North Latitude -105.939670 East Longitude (New Mexico State Capitol)</li>
 		<p><b>ANSWER:</b></p>
-		<li></li>
+		<li>34.891983 North Latitude -107.930153 East Longitude (El Malpais National Monument)</li>
 		<p><b>ANSWER:</b></p>
-		<li></li>
-		<p><b>ANSWER:</b></p>
-		<li></li>
-		<p><b>ANSWER:</b></p>
-	</ul>
-	<p></p>
+	</ol>
 
-	<h2>Question 5</h2>
-	<ul> 
-		<li></li>
+<h2>Question 4 Perform the following WMS GetCapabilities request
+<p>http://neowms.sci.gsfc.nasa.gov/wms/wms?version=1.1.1&service=WMS&request=GetCapabilities</p>
+And answer the following questions (4 pts each)
+</h2>
+	<ol> 
+		<li>What is the name of the service?</li>
 		<p><b>ANSWER:</b></p>
-		<li></li>
+		<li>What ﬁle formats are supported by the GetMap request?</li>
 		<p><b>ANSWER:</b> WMS</p>
-		<li></li>
+		<li>What are the names of three of the layers included in the service?</li>
 		<p><b>ANSWER:</b></p>
-		<li></li>
+	</ol>
+
+<h2>Question 5 Compose a GetMap request for the WMS referenced in Question 4 that includes the following characteristics:
+</h2>
+	<ul>
+		<li>JPEG image format</li>
+		<li>1200 pixels wide (you will need to calculate the height based upon the aspect ratio of the bounding box)</li>
+		<li>Bounding Box (EPSG:4326): Min X = -128 East Longitude, Min Y = 21.5 North Latitude, Max X = -62 East Longitude, Max Y = 54.5 North Latitude</li>
+		<li> Layer to be mapped = “MOD_LSTD_CLIM_M”</li>
 		<p><b>ANSWER:</b></p>
 	</ul>
-	<p></p>
+	<p> Layer to be mapped = “MOD_LSTD_CLIM_M”</p>
 
-	<h2>Question 6</h2>
-	<p></p>
-	<ul>
-		<li></li>
-		<p><b>ANSWER:</b></p>
-		<li></li>
-		<p><b>ANSWER:</b></p>
-		<li></li>
-		<p><b>ANSWER:</b></p>
-		<li></li>
-		<p><b>ANSWER:</b></p>
-	</ul>
-	<p></p>
-
-	<h2>Question 7</h2>
-	<ul>
-		<li></li>
+<h2>Question 6 From the XML GetCapabilities returned by the following WFS request answer the following questions (4 pts each)</h2>
+	<p>http://services.nationalmap.gov/arcgis/services/WFS/transportation/MapServer/WFSServer?
+request=GetCapabilities&service=WFS</p>
+	<ol>
+		<li>What is the title for this service?</li>
 		<p><b>ANSWER:</b><p>
-		<li></li>
-	
+		<li>What ﬁle format(s) are supported by this service’s GetFeature request?</li>
 		<p><b>ANSWER:</b> 
-		<p></p>
-	</ul>
-	
+		<li>What is the DefaultSRS or the FeatureType named “WFS_transportation:Interstate”?</li>
+		<p><b>ANSWER:</b> 
+		<li>What is the WGS84BoundingBox of the FeatureType named “WFS_transportation:Interstate”?</li>
+	</ol>
 
-	<h2>Question 8</h2>
-	<ul>
-		<li></li>
+<h2>Question 7  From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</h2>
+	<p>http://sdf.ndbc.noaa.gov/thredds/wcs/hfradar_uswc_500m?request=GetCapabilities
+&version=1.0.0&service=WCS</p>
+
+	<ol>
+		<li>What is the description of the v coverage?</li>
 		<p><b> ANSWER:</b></p>
-	
-	</ul>	
-	
+		<li>How many coverages are available from this service?</li>
+
+<h2>Question 8a From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</h2>
+		<ol>
+			<li>DescribeCoverage request</li>
+			<p><b> ANSWER:</b></p>
+		</ol>	
+
+<h2>Question 8b From the returned XML document answer the following questions. (4 pts each)</h2>
+		<ol>
+			<li>What is the spatial domain for the ‘v‘ coverage?</li>
+			<p><b> ANSWER:</b></p>
+			<li>What ﬁle formats are available for ‘v‘ data delivered by this service?</li>
+			<p><b> ANSWER:</b></p>
+			<li>What SRS(s) are supported by this service for requested data delivery?
+</li>
+			<p><b> ANSWER:</b></p>
+		</ol>
+
 	</body>
 	
 	
