--- a/midterm.html
+++ b/midterm.html
@@ -27,7 +27,7 @@
 	
 	<h1>Midterm</h1>
 	
-<h2>Question 1 Which command line utility would you use to determine the following (4 pts each)</h2>
+<h2>Question 1 <i>Which command line utility would you use to determine the following (4 pts each)</i></h2>
 	<p>The spatial extent of a GML ﬁle (choose one)?</p>
 	<p><b>ANSWER:</b> </p>
 	
@@ -77,7 +77,6 @@ And answer the following questions (4 pts each)
 		<li> Layer to be mapped = “MOD_LSTD_CLIM_M”</li>
 		<p><b>ANSWER:</b></p>
 	</ul>
-	<p> Layer to be mapped = “MOD_LSTD_CLIM_M”</p>
 
 <h2>Question 6 From the XML GetCapabilities returned by the following WFS request answer the following questions (4 pts each)</h2>
 	<p>http://services.nationalmap.gov/arcgis/services/WFS/transportation/MapServer/WFSServer?
