--- a/midterm.html
+++ b/midterm.html
@@ -34,7 +34,7 @@
 	<p>The spatial reference system of a raster ﬁle in the format of a GeoTIFF (choose one)?</p>
 	<p><b>ANSWER:</b></p>
 	
-<h2>Question 2  What combination of OGC Service and Request (e.g.SERVICE=WMS&REQUEST=GetFeatureInfo) would you use to perform the following? (3 pts each)</h2>
+<h2>Question 2  <i>What combination of OGC Service and Request (e.g.SERVICE=WMS&REQUEST=GetFeatureInfo) would you use to perform the following? (3 pts each)</i></h2>
 	<ol>
 		<li>Determine the spatial extent of an available layer from a Web Map Service</li>
 		<p><b>ANSWER:</b></p>
@@ -47,7 +47,7 @@
 		<li>Retrieve data from an available coverage from a Web Coverage Service</li>
 	</ol>
 
-<h2>Question 3 Use the cs2cs command line utility to convert the following latitude-longitude coordinates(WGS84) to UTM, Zone 13N, NAD83 coordinates (5 pts each) </h2>
+<h2>Question 3 <i>Use the cs2cs command line utility to convert the following latitude-longitude coordinates(WGS84) to UTM, Zone 13N, NAD83 coordinates (5 pts each)</i> </h2>
 	<ol>
 		<li>35.682180 North Latitude -105.939670 East Longitude (New Mexico State Capitol)</li>
 		<p><b>ANSWER:</b></p>
@@ -55,8 +55,8 @@
 		<p><b>ANSWER:</b></p>
 	</ol>
 
-<h2>Question 4 Perform the following WMS GetCapabilities request
-<p>http://neowms.sci.gsfc.nasa.gov/wms/wms?version=1.1.1&service=WMS&request=GetCapabilities</p>
+<h2>Question 4 <i>Perform the following WMS GetCapabilities request
+<p>http://neowms.sci.gsfc.nasa.gov/wms/wms?version=1.1.1&service=WMS&request=GetCapabilities</i></p>
 And answer the following questions (4 pts each)
 </h2>
 	<ol> 
@@ -68,7 +68,7 @@ And answer the following questions (4 pts each)
 		<p><b>ANSWER:</b></p>
 	</ol>
 
-<h2>Question 5 Compose a GetMap request for the WMS referenced in Question 4 that includes the following characteristics:
+<h2>Question 5 <i>Compose a GetMap request for the WMS referenced in Question 4 that includes the following characteristics:</i>
 </h2>
 	<ul>
 		<li>JPEG image format</li>
@@ -78,7 +78,7 @@ And answer the following questions (4 pts each)
 		<p><b>ANSWER:</b></p>
 	</ul>
 
-<h2>Question 6 From the XML GetCapabilities returned by the following WFS request answer the following questions (4 pts each)</h2>
+<h2>Question 6 <i>From the XML GetCapabilities returned by the following WFS request answer the following questions (4 pts each)</i></h2>
 	<p>http://services.nationalmap.gov/arcgis/services/WFS/transportation/MapServer/WFSServer?
 request=GetCapabilities&service=WFS</p>
 	<ol>
@@ -91,7 +91,7 @@ request=GetCapabilities&service=WFS</p>
 		<li>What is the WGS84BoundingBox of the FeatureType named “WFS_transportation:Interstate”?</li>
 	</ol>
 
-<h2>Question 7  From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</h2>
+<h2>Question 7 <i>From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</i></h2>
 	<p>http://sdf.ndbc.noaa.gov/thredds/wcs/hfradar_uswc_500m?request=GetCapabilities
 &version=1.0.0&service=WCS</p>
 
@@ -100,13 +100,13 @@ request=GetCapabilities&service=WFS</p>
 		<p><b> ANSWER:</b></p>
 		<li>How many coverages are available from this service?</li>
 
-<h2>Question 8a From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</h2>
+<h2>Question 8a <i>From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</i></h2>
 		<ol>
 			<li>DescribeCoverage request</li>
 			<p><b> ANSWER:</b></p>
 		</ol>	
 
-<h2>Question 8b From the returned XML document answer the following questions. (4 pts each)</h2>
+<h2>Question 8b <i>From the returned XML document answer the following questions. (4 pts each)</i></h2>
 		<ol>
 			<li>What is the spatial domain for the ‘v‘ coverage?</li>
 			<p><b> ANSWER:</b></p>
