--- a/midterm.html
+++ b/midterm.html
@@ -89,6 +89,7 @@ request=GetCapabilities&service=WFS</p>
 		<li>What is the DefaultSRS or the FeatureType named “WFS_transportation:Interstate”?</li>
 		<p><b>ANSWER:</b> 
 		<li>What is the WGS84BoundingBox of the FeatureType named “WFS_transportation:Interstate”?</li>
+		<p><b>ANSWER:</b> 
 	</ol>
 
 <h2>Question 7 <i>From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</i></h2>
@@ -99,6 +100,8 @@ request=GetCapabilities&service=WFS</p>
 		<li>What is the description of the v coverage?</li>
 		<p><b> ANSWER:</b></p>
 		<li>How many coverages are available from this service?</li>
+		<p><b>ANSWER:</b> 
+	</ol>
 
 <h2>Question 8a <i>From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</i></h2>
 		<ol>
