--- a/midterm.html
+++ b/midterm.html
@@ -29,22 +29,23 @@
 	
 <h2>Question 1 <i>Which command line utility would you use to determine the following (4 pts each)</i></h2>
 	<p>The spatial extent of a GML ﬁle (choose one)?</p>
-	<p><b>ANSWER:</b> </p>
+	<p><b>ANSWER:</b> ogrinfo</p>
 	
 	<p>The spatial reference system of a raster ﬁle in the format of a GeoTIFF (choose one)?</p>
-	<p><b>ANSWER:</b></p>
+	<p><b>ANSWER:</b> gdalinfo</p>
 	
 <h2>Question 2  <i>What combination of OGC Service and Request (e.g.SERVICE=WMS&REQUEST=GetFeatureInfo) would you use to perform the following? (3 pts each)</i></h2>
 	<ol>
 		<li>Determine the spatial extent of an available layer from a Web Map Service</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> SERVICE=WMS&REQUEST=GetCapabilities</p>
 		<li>Obtain a list of coverages from a Web Coverage service.</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> SERVICE=WCS&REQUEST=GetCapabilities</p>
 		<li>Determine what ﬁle formats are supported by a Web Feature Service for the delivery of available data types (i.e. layers)</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> SERVICE=WFS&REQUEST=GetCapabilities</p>
 		<li>Retrieve a map image from a Web Map Service</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> SERVICE=WMS&REQUEST=GetMap</p>
 		<li>Retrieve data from an available coverage from a Web Coverage Service</li>
+		<p><b>ANSWER:</b> SERVICE=WCS&REQUEST=GetCoverage</p>
 	</ol>
 
 <h2>Question 3 <i>Use the cs2cs command line utility to convert the following latitude-longitude coordinates(WGS84) to UTM, Zone 13N, NAD83 coordinates (5 pts each)</i> </h2>
