Answered question 3 midterm

--- a/midterm.html
+++ b/midterm.html
@@ -51,9 +51,9 @@
 <h2>Question 3 <i>Use the cs2cs command line utility to convert the following latitude-longitude coordinates(WGS84) to UTM, Zone 13N, NAD83 coordinates (5 pts each)</i> </h2>
 	<ol>
 		<li>35.682180 North Latitude -105.939670 East Longitude (New Mexico State Capitol)</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> <img src=Images/StateCapital.png></p>
 		<li>34.891983 North Latitude -107.930153 East Longitude (El Malpais National Monument)</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> <img src- Images/elmapis.png></p>
 	</ol>
 
 <h2>Question 4 <i>Perform the following WMS GetCapabilities request
