--- a/midterm.html
+++ b/midterm.html
@@ -53,7 +53,7 @@
 		<li>35.682180 North Latitude -105.939670 East Longitude (New Mexico State Capitol)</li>
 		<p><b>ANSWER:</b> <img src=Images/StateCapital.png></p>
 		<li>34.891983 North Latitude -107.930153 East Longitude (El Malpais National Monument)</li>
-		<p><b>ANSWER:</b> <img src- Images/elmapis.png></p>
+		<p><b>ANSWER:</b> <img src=Images/elmapis.png></p>
 	</ol>
 
 <h2>Question 4 <i>Perform the following WMS GetCapabilities request
