Answered question 4 midterm

--- a/midterm.html
+++ b/midterm.html
@@ -62,11 +62,17 @@ And answer the following questions (4 pts each)
 </h2>
 	<ol> 
 		<li>What is the name of the service?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> OGC:WMS</p>
 		<li>What ﬁle formats are supported by the GetMap request?</li>
-		<p><b>ANSWER:</b> WMS</p>
+		<p><b>ANSWER:</b> image/png and image/jpeg</p>
 		<li>What are the names of three of the layers included in the service?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b>
+			<ol>
+				<li>MOD14A1_M_FIRE</li>
+				<li>MOD14A1_E_FIRE</li>
+				<li>MOD14A1_D_FIRE</li>
+			</ol>
+		</p>
 	</ol>
 
 <h2>Question 5 <i>Compose a GetMap request for the WMS referenced in Question 4 that includes the following characteristics:</i>
