--- a/midterm.html
+++ b/midterm.html
@@ -82,7 +82,7 @@ And answer the following questions (4 pts each)
 		<li>1200 pixels wide (you will need to calculate the height based upon the aspect ratio of the bounding box)</li>
 		<li>Bounding Box (EPSG:4326): Min X = -128 East Longitude, Min Y = 21.5 North Latitude, Max X = -62 East Longitude, Max Y = 54.5 North Latitude</li>
 		<li> Layer to be mapped = “MOD_LSTD_CLIM_M”</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> <img src="http://neo.sci.gsfc.nasa.gov/servlet/FGDCMetadata?VERSION=1.1.1&SERVICE=WMS&REQUEST=GetMap&BBOX=-106.639,35.074,-106.609,35.094&LAYERS=MOD_LSTD_CLIM_M&WIDTH=600&HEIGHT=400&CRS=EPSG:4326&FORMAT=image/png&STYLES="</p>
 	</ul>
 
 <h2>Question 6 <i>From the XML GetCapabilities returned by the following WFS request answer the following questions (4 pts each)</i></h2>
