--- a/midterm.html
+++ b/midterm.html
@@ -105,12 +105,12 @@ request=GetCapabilities&service=WFS</p>
 
 	<ol>
 		<li>What is the description of the v coverage?</li>
-		<p><b> ANSWER:</b></p>
+		<p><b> ANSWER:</b> m s-1 true surface_northward_sea_water_velocity</p>
 		<li>How many coverages are available from this service?</li>
-		<p><b>ANSWER:</b> 
+		<p><b>ANSWER:</b> 4</p>
 	</ol>
 
-<h2>Question 8a <i>From the XML GetCapabilities returned by the following WCS request answer the following questions (4 pts each)</i></h2>
+<h2>Question 8a <i>Formulate a complete DescribeCoverage request for the v coverage for the WCS service referenced in question 7. (4 pts)</i></h2>
 		<ol>
 			<li>DescribeCoverage request</li>
 			<p><b> ANSWER:</b></p>
