midterm almost done

--- a/midterm.html
+++ b/midterm.html
@@ -873,7 +873,7 @@ DOPx true longitudinal dilution of precision
 			<li>What ﬁle formats are available for ‘v‘ data delivered by this service?</li>
 			<p><b> ANSWER:</b> <img src=Images/coveragetypes.png></p>
 			<li>What SRS(s) are supported by this service for requested data delivery?</li>	
-			<p><b> ANSWER:</b> <img src=Images/requested.png</p>
+			<p><b> ANSWER:</b> <img src=Images/requested.png></p>
 		</ol>
 
 	</body>
