Milestone 8 finished final

--- a/milestone_08.html
+++ b/milestone_08.html
@@ -98,7 +98,7 @@
 	
 	<h2>Question 1</h2>
 	<p>What area do you want to depict in your map? Why?</p>
-	<p><b>ANSWER:</b> The area I would like to depict in my map is the Valles Caldera National Preserve that is located in the Jemez Mountains. I would like to depict this area because I would like to show the extent large size of the once active volcano. </p>
+	<p><b>ANSWER:</b> The area I would like to depict in my map is the Valles Caldera National Preserve that is located in the Jemez Mountains. I would like to depict this area because I would like to show the large extent of the once active volcano. </p>
 	
 	<h2>Question 2</h2>
 	<p>What is the center point (latitude and longitude) of your area of interest?</p>
@@ -106,7 +106,7 @@
 	
 	<h2>Question 3</h2>
 	<p>What base map(s) did you select for use in your map? Why?</p>
-	<p><b>ANSWER:</b> I used the google maps. These maps were used because the google physical map along with the satellite imagery you can distinguish the border and outline of what once was a active volcano. The road maps are simply for reference to its location in the rest of the state.</p>
+	<p><b>ANSWER:</b> I used the google maps. These maps were used because the google physical map along with the satellite imagery will allow you to distinguish the border and outline of what once was a active volcano. The road maps are simply for reference to its location in the rest of the state.</p>
 	
 	<h2>Question 4</h2>
 	<p> What is the scale of your map (local, regional, continental, global)? How will this translate into your selection of an appropriate default zoom level for your map?</p>
