created deep dive 3

--- a/milestone_08.html
+++ b/milestone_08.html
@@ -50,7 +50,7 @@
             );
             
 
-            map.addLayers([gsat, gmap, ghyb, gphy]);
+            map.addLayers([gphy, gmap, ghyb, gsat]);
 
      
 
@@ -79,8 +79,8 @@
 			background-color: black; 
 			color: #CCCCCC;
 			text-align: left}
-		  #map { width:80%; 
-			height:80%; 
+		  #map { width:95%; 
+			height:95%; 
 			margin-left: auto; 
 			margin-right: auto }
 		</style> 
