--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<h2>Deep Dives</h2>
 		<p><a href="http://aemtoyo.github.io/geog485/deepdive_01.html">Deep Dive 1</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/deepdive_02.html">Deep Dive 2</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/deepdive_03.html">Deep Dive 3</a></p>
 	
 	</body>
 </html>
