created milestone 10 and added it to index

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_07.html">Milestone 7</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_08.html">Milestone 8</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_09.html">Milestone 9</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/milestone_10.html">Milestone 10</a></p>
 		
 		<h2>Tests</h2>
 		<p><a href="http://aemtoyo.github.io/geog485/midterm.html">Midterm Test</a></p>
