--- a/milestone_10.html
+++ b/milestone_10.html
@@ -43,13 +43,13 @@
 	<p><b>ANSWERS:</b>
 		<ul>
 			<li><p>USGS Topo Base Map - Primary Tile Cache from the http://viewer.nationalmap.gov/example/services/serviceList.html </p></li>
-			<img src=IMAGES/wms1.png>
+			<img src=Images/wms1.png>
 			
 			<li><p>Land Cover from the http://viewer.nationalmap.gov/example/services/serviceList.html</p></li>
-			<img src=IMAGES/wms2.png>
+			<img src=Images/wms2.png>
 			
 			<li><p></p></li>
-			<img src=IMAGES/>
+			<img src=Images/>
 		
 		</ul>
 	</p>
@@ -63,17 +63,17 @@
 			<li><p> NM 500 FT Contour Intervals from RGIS</p>
 				<p> Get Map Request: http://gstore.unm.edu/apps/rgis/datasets/c0324950-6f96-49e4-a638-da7423c71ec3/services/ogc/wfs?VERSION=1.0.0</p>
 			</li>
-			<img src=IMAGES/wfs1.png>
+			<img src=Images/wfs1.png>
 			
 			<li><p> NM Cites and Towns from RGIS</p>
 				<p>Get Map Request: http://gstore.unm.edu/apps/rgis/datasets/02eddccb-bd3a-4751-9346-19a69c6421f3/services/ogc/wfs?VERSION=1.0.0</p>
 			</li>
-			<img src=IMAGES/wfs2.png>
+			<img src=Images/wfs2.png>
 			
 			<li><p>Cultural Points from services.nationalmap.gov/arcgis/services/WFS/geonames/MapServer/WFSServer?request=GetCapabilities&service=WFS</p>
 				<p>Get Map Request: http://services.nationalmap.gov/arcgis/services/WFS/geonames/MapServer/WFSServer</p>
 			</li>
-			<img src=IMAGES/wfs3.png>
+			<img src=Images/wfs3.png>
 		
 		</ul>
 	</p>
