Working on deep dive 3

--- a/deepdive_03.html
+++ b/deepdive_03.html
@@ -33,25 +33,26 @@
 	
 	<ul>
 		<li>What is the high-level description of the problem/question you want to help answer through the presentation of a collection of geographic data over the internet? Please answer in a short paragraph.</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> I would like to determine the acequia irrigation systems that are in place in the northern New Mexico community of Chimayo. I will use geographic data such as NAIP 1m resolution data and digitized shapefiles converted to kml to highlight where these acequias are present.</p>
 		
 		<li>Who is the target audience for the information you want to provide?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> The target audience will be those who are interested in the acequia systems and those who would like to see an application of remote sensing, GIS and the use of freeware to map features. </p>
 		
 		<li>What geographic region does your problem area represent? Please describe it in words (e.g. New Mexico, Alberta Canada, etc.) and define it in terms of a geographic (WGS84) (latitude and longitude) bounding box.</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> It is the community of Chimayo located in northern New Mexico. 
+		<img src=Images/bbox.png></p>
 		
 		<li>What types of data do you want to include in your project? Include a description (data content: e.g. elevation data, hydrographic survey, etc.) and types (i.e. raster, vector).</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> The data will include 1m resolution NAIP data, shapefiles that have been digitized from the NAIP data and google maps and possibly OSM.</p>
 		
 		<li>What projection will you use for the presentation of your project data? Again, describe it, provide your reasoning for selection, and provide the corresponding EPSG code.</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> The ESPG:4326 will be used because that is the correct projection for the part of the world I will be working in.</p>
 		
 		<li>Where do you anticipate acquiring data for the project from?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> RGIS</p>
 		
 		<li>What barriers to acquiring and processing the needed data do you anticipate?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b> I dont believe there will be many.</p>
 		
 	</ul>
 		
