--- a/deepdive_03.html
+++ b/deepdive_03.html
@@ -40,7 +40,8 @@
 		
 		<li>What geographic region does your problem area represent? Please describe it in words (e.g. New Mexico, Alberta Canada, etc.) and define it in terms of a geographic (WGS84) (latitude and longitude) bounding box.</li>
 		<p><b>ANSWER:</b> It is the community of Chimayo located in northern New Mexico. 
-		<img src=Images/bbox.png></p>
+		<p><img src=Images/bbox.png></p>
+		</p>
 		
 		<li>What types of data do you want to include in your project? Include a description (data content: e.g. elevation data, hydrographic survey, etc.) and types (i.e. raster, vector).</li>
 		<p><b>ANSWER:</b> The data will include 1m resolution NAIP data, shapefiles that have been digitized from the NAIP data and google maps and possibly OSM.</p>
