--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_08.html">Milestone 8</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_09.html">Milestone 9</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_10.html">Milestone 10</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/milestone_11.html">Milestone 11</a></p>
 		
 		<h2>Tests</h2>
 		<p><a href="http://aemtoyo.github.io/geog485/midterm.html">Midterm Test</a></p>
