Finished Milestone 11 and set up geoserver

--- a/milestone_11.html
+++ b/milestone_11.html
@@ -34,6 +34,14 @@
 	<p>What command would you use to read the "manual page" for a specific command?</p>
 	<p><b>ANSWER:</b> man</p>
 	
+<h1>Question 3</h1>
+	<p><b>ANSWER:</b> 
+	<ul>
+	<li><img src=Images/NMstate.png></li>
+	<li><img src=Images/stat.png></li>
+	<li><img src=Images/county.png></li>
+	</ul>
+	</p>
 
 	</body>
 	
