changed style of index

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		  body { height: 100%; 
 			margin: 10px; 
 			padding: 10px; 
-			background-color: black; 
-			color: #CCCCCC;
+			background-color: white; 
+			color: #000000;
 			text-align: left}
 			
 		</style>
