Hopefully problem fixed

--- a/deepdive_03.html
+++ b/deepdive_03.html
@@ -62,10 +62,32 @@
 	<ul>
 		
 		<li>What is the name of the dataset?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b>
+		
+		<ol>
+			<li> 36105-A8_CONT_shp - 100 ft contours for Rio Arriba County</li>
+			<li> hyp2shp_shp</li>
+			<li> m_3610557_se_13_1_20110527_tif 2 - SE NAIP Imagery Chimayo 2012</li>
+			<li> m_3610557_sw_13_1_20110527_tif (1) - SE NAIP Imagery Chimayo 2012</li>
+			<li> tl_2010_35_place10_shp - NM County Boundaries</li>
+			<li> tl_2010_35039_linearwater_shp - Linear Water Features NM</li>
+			
+		</ol>
+		</p>
 		
 		<li>What type of data (raster/vector) are in the dataset?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b>
+		
+		<ol>
+			<li> 36105-A8_CONT_shp - 100 ft contours for Rio Arriba County: Vector</li>
+			<li> hyp2shp_shp</li>
+			<li> m_3610557_se_13_1_20110527_tif 2 - SE NAIP Imagery Chimayo 2012: Raster</li>
+			<li> m_3610557_sw_13_1_20110527_tif (1) - SE NAIP Imagery Chimayo 2012: Raster</li>
+			<li> tl_2010_35_place10_shp - NM County Boundaries: Vector</li>
+			<li> tl_2010_35039_linearwater_shp - Linear Water Features NM: Vector</li>
+			
+		</ol>
+		</p>
 		
 		<li>What is its format?</li>
 		<p><b>ANSWER:</b></p>
