--- a/milestone_12.html
+++ b/milestone_12.html
@@ -31,9 +31,9 @@
 	<p>Layer Name: s_aemtoyo:kb_tl_2010_35_state10</p>
 	<ul>
 	<p>Style Name: StateBound_01</p>
-	<li><img src/Images/SB_1.png</li>
+	<li><img src=Images/SB_01.png></li>
 	<p>Style Name: StateBound</p>
-	<li><img src/Images/SB.png</li>
+	<li><img src=Images/SB.png></li>
 	</ul>
 	</p>
 	
@@ -41,9 +41,9 @@
 	<p>Layer Name: s_aemtoyo:kb_2007fe_35_county00</p>
 	<ul>
 	<p>Style Name: CountyStyle_01</p>
-	<li><img src/Images/CS_01.png</li>
+	<li><img src=Images/CS_01.png></li>
 	<p>Style Name: CountyStyle_02</p>
-	<li><img src/Images/CS_02.png</li>
+	<li><img src=Images/CS_02.png></li>
 	</ul>
 	</p>
 
