Finished Deep Dive 3

--- a/deepdive_03.html
+++ b/deepdive_03.html
@@ -66,10 +66,10 @@
 		
 		<ol>
 			<li> 36105-A8_CONT_shp - 100 ft contours for Rio Arriba County</li>
-			<li> hyp2shp_shp</li>
+			<li> hyp2shp_shp -  500 ft contours for New Mexico</li>
 			<li> m_3610557_se_13_1_20110527_tif 2 - SE NAIP Imagery Chimayo 2012</li>
-			<li> m_3610557_sw_13_1_20110527_tif (1) - SE NAIP Imagery Chimayo 2012</li>
-			<li> tl_2010_35_place10_shp - NM County Boundaries</li>
+			<li> m_3610557_sw_13_1_20110527_tif (1) - SW NAIP Imagery Chimayo 2012</li>
+			<li> tl_2010_35_place10_shp - 2010 Census Place NM</li>
 			<li> tl_2010_35039_linearwater_shp - Linear Water Features NM</li>
 			
 		</ol>
@@ -80,23 +80,92 @@
 		
 		<ol>
 			<li> 36105-A8_CONT_shp - 100 ft contours for Rio Arriba County: Vector</li>
-			<li> hyp2shp_shp</li>
+			<li> hyp2shp_shp - 500 ft contours for New Mexico : Vector</li>
 			<li> m_3610557_se_13_1_20110527_tif 2 - SE NAIP Imagery Chimayo 2012: Raster</li>
-			<li> m_3610557_sw_13_1_20110527_tif (1) - SE NAIP Imagery Chimayo 2012: Raster</li>
-			<li> tl_2010_35_place10_shp - NM County Boundaries: Vector</li>
+			<li> m_3610557_sw_13_1_20110527_tif (1) - SW NAIP Imagery Chimayo 2012: Raster</li>
+			<li> tl_2010_35_place10_shp - 2010 Census Place NM: Vector</li>
 			<li> tl_2010_35039_linearwater_shp - Linear Water Features NM: Vector</li>
 			
 		</ol>
 		</p>
 		
 		<li>What is its format?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b>
+		
+		<ol>
+			<li> 36105-A8_CONT_shp - 100 ft contours for Rio Arriba County
+			<p> Shapefile - .shp</p>
+			</li>
+			<li> hyp2shp_shp -  500 ft contours for New Mexico
+			<p> Shapefile - .shp</p>
+			</li>
+			<li> m_3610557_se_13_1_20110527_tif 2 - SE NAIP Imagery Chimayo 2012
+			<p> TIFF - .tif</p>
+			</li>
+			<li> m_3610557_sw_13_1_20110527_tif (1) - SW NAIP Imagery Chimayo 2012
+			<p> TIFF - .tif</p>
+			</li>
+			<li> tl_2010_35_place10_shp - 2010 Census Place NM
+			<p> Shapefile - .shp</p>
+			</li>
+			<li> tl_2010_35039_linearwater_shp - Linear Water Features NM
+			<p> Shapefile - .shp</p>
+			</li>
+			
+		</ol>
+		</p>
 		
 		<li>What is its coordinate reference system?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b>
+		
+		<ol>
+			<li> 36105-A8_CONT_shp - 100 ft contours for Rio Arriba County
+			<p> EPSG:4326 - WGS 84</p>
+			</li>
+			<li> hyp2shp_shp -  500 ft contours for New Mexico
+			<p> EPSG:4326 - WGS 84</p>
+			</li>
+			<li> m_3610557_se_13_1_20110527_tif 2 - SE NAIP Imagery Chimayo 2012
+			<p> EPSG:26913 - NAD83 / UTM zone 13N</p>
+			</li>
+			<li> m_3610557_sw_13_1_20110527_tif (1) - SW NAIP Imagery Chimayo 2012
+			<p> EPSG:26913 - NAD83 / UTM zone 13N</p>
+			</li>
+			<li> tl_2010_35_place10_shp - 2010 Census Place NM
+			<p> EPSG:4326 - WGS 84</p>
+			</li>
+			<li> tl_2010_35039_linearwater_shp - Linear Water Features NM
+			<p> EPSG:4326 - WGS 84</p>
+			</li>
+			
+		</ol>
+		</p>
 		
 		<li>What are the spatial extents of the dataset?</li>
-		<p><b>ANSWER:</b></p>
+		<p><b>ANSWER:</b>
+		
+		<ol>
+			<li> 36105-A8_CONT_shp - 100 ft contours for Rio Arriba County
+			<p><img src=Images/100ftcont.png></p>
+			</li>
+			<li> hyp2shp_shp -  500 ft contours for New Mexico
+			<p><img src=Images/500ftcont.png></p>
+			</li>
+			<li> m_3610557_se_13_1_20110527_tif 2 - SE NAIP Imagery Chimayo 2012
+			<p><img src=Images/Chimayo_se.png></p>
+			</li>
+			<li> m_3610557_sw_13_1_20110527_tif (1) - SW NAIP Imagery Chimayo 2012
+			<p><img src=Images/Chimayo_sw.png></p>
+			</li>
+			<li> tl_2010_35_place10_shp - 2010 Census Place NM
+			<p><img src=Images/Census.png></p>
+			</li>
+			<li> tl_2010_35039_linearwater_shp - Linear Water Features NM
+			<p><img src=Images/Lineh2o.png></p>
+			</li>
+			
+		</ol>
+		</p>
 		
 	</ul>
 	</body>
