--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_10.html">Milestone 10</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_11.html">Milestone 11</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_12.html">Milestone 12</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/milestone_13.html">Milestone 13</a></p>
 		
 		<h2>Tests</h2>
 		<p><a href="http://aemtoyo.github.io/geog485/midterm.html">Midterm Test</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/final.html">Final Test</a></p>
+		
 		
 		
 		
@@ -64,6 +67,6 @@
 		<p><a href="http://aemtoyo.github.io/geog485/deepdive_01.html">Deep Dive 1</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/deepdive_02.html">Deep Dive 2</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/deepdive_03.html">Deep Dive 3</a></p>
-	
+		<p><a href="http://aemtoyo.github.io/geog485/deepdive_04.html">Deep Dive 4</a></p>
 	</body>
 </html>
